--- a/css/styles.css
+++ b/css/styles.css
@@ -660,8 +660,8 @@ input[type='checkbox'] {
 }
 
 .navbar-custom .navbar-brand.logo-image img {
-    width: 4.4375rem;
-	height: 1.75rem;
+    width: 8%;
+
 }
 
 .navbar-custom .navbar-brand.logo-text {
